[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/laser.png" type="Texture" id=1]
[ext_resource path="res://scripts/fires/laser.gd" type="Script" id=2]
[ext_resource path="res://sound/laserRetro_001.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 256 )

[node name="laser" type="Area2D" groups=[
"fire",
]]
position = Vector2( 208.956, 706.258 )
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, -12.8 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12.8 )
scale = Vector2( 0.05, 0.05 )
shape = SubResource( 1 )

[node name="laser_beam" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="area_entered" from="." to="." method="_on_laser_area_entered"]
[connection signal="finished" from="laser_beam" to="." method="_on_laser_beam_finished"]
